--- a/css/style.css
+++ b/css/style.css
@@ -1680,7 +1680,7 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			box-shadow: 0 0 0 2px #21b2a6;
+			box-shadow: 0 0 0 2px #fff;
 		}
 
 	.select-wrapper {
